Fixed signup errors not showing up

--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,7 +1,7 @@
 .signup_form{
     border: 1px solid white;
     width: 50%;
-    height: 46em;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
